2010-07-19  d+w3m@vdr.jp

	* [w3m-dev 04321] Re: w3m's bugs from bugs.debian.org
	* http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=185006#22
	* main.c (sig_chld): save exit code to d->err.
	(addDownloadList): initialize d->running and d->err.
	(DownloadListBuffer): check d->err.

	* fm.h (_DownloadList): add running and err.

	* file.c (save2tmp): check returned value of Strfputs().
	(doFileSave): exit code is depend on the returned value of save2tmp().

2010-07-19  d+w3m@vdr.jp

	* [w3m-dev 04238] [patch] simple preserve space
	* rc.c: Introduce option simple_preserve_space.
	* fm.h: add global variable SimplePreserveSpace.
	* file.c (HTMLlineproc0): check SimplePreserveSpace.

2010-07-18 d+w3m@vdr.jp

	* [w3m-dev 04319] Re: w3m's bugs from bugs.debian.org
	http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=242599#21
	* file.c (is_html_type): added.
	(examineFile, loadGeneralFile, _saveBuffer)
	(openGeneralPagerBuffer, reloadBuffer): use is_html_type() instead
	of strcasecmp().
	(loadGeneralFile): set f.guess_tupe
	* display.c (displayBuffer): use is_html_type() instead of strcasecmp().
	* buffer.c (reshapeBuffer): use is_html_type() instead of strcasecmp().
	* backend.c (internal_get): use is_html_type() instead of strcasecmp().
	* main.c (vwSrc, reload, dispI, stopI): use is_html_type() instead of strcasecmp().
	* proto.h: add is_html_type()
	* url.c: add "xhtml" to DefaultGuess.

2010-07-18 Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 04286] Re: break textform when buffer back
	* form.c (form_update_line): set line->size

2010-07-18 d+w3m@vdr.jp

	* [w3m-dev 04319] Re: w3m's bugs from bugs.debian.org
	* doc/w3m.1: fix typo.
	* doc-jp/w3m.1: update
	* terms.c: fix version check logic for FreeBSD
	http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=493486
	* scripts/w3mman/w3mman2html.cgi.in (Content-Type):
	"MAN_KEEP_FORMATTING=1"
	http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=325699
	* istream.c (ssl_check_cert_ident): replace \0 to make full string